# bybit-rs

./: .gitignore  Cargo.toml  README.md
examples/: create_order.rs  websocket.rs
src/: common.rs  enums.rs  lib.rs  prelude.rs  res.json  rest.rs  store.rs  structs.rs  websocket.rs
src/common/: enums.rs  structs.rs
src/rest/: core.rs  enums.rs  structs.rs
src/structs/: instrument.rs  orderbook.rs  position.rs  record.rs
src/websocket/: core.rs  enums.rs  store.rs  structs.rs
src/websocket/structs/: instrument.rs  orderbook.rs  position.rs  record.rs
tests/: common.rs  test_connection.rs  test_deserialize.rs  test_store.rs  test_websocket.rs
