[package]
name = "bybit-rs"
version = "0.1.0"
authors = ["tnagao <tnagao+git@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
async-tungstenite = { version = "0.13.0", features = ["async-std-runtime", "async-native-tls"] }
dotenv = "0.15.0"
env_logger = "0.8.3"
futures = "0.3.13"
hmac = "0.10.1"
#futures-util = "0.3.13"
log = "0.4.14"
#hex-literal = "0.3.1"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
sha2 = "0.9.3"
tokio = { version = "1.3.0", features = ["full"] }
#tokio-tungstenite = { version = "0.14.0" }
url = "2.2.1"
#ws = "0.9.1"
