[package]
name = "bybit-rs"
version = "0.1.0"
authors = ["tnagao <tnagao+git@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = { version = "0.13.0", features = ["async-std-runtime", "async-native-tls"] }
chrono = "0.4.19"
futures = "0.3.13"
hmac = "0.10.1"
log = "0.4.14"
once_cell = "1.7.2"
reqwest = { version = "0.11.2", features = ["json"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
sha2 = "0.9.3"
tokio = { version = "1.3.0", features = ["full"] }
url = "2.2.1"

[dev-dependencies]
async-std = "1.9.0"
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
